--- a/hw1/CMakeLists.txt
+++ b/hw1/CMakeLists.txt
@@ -1,3 +1,4 @@
+set(CMAKE_CXX_STANDARD 17)
 cmake_minimum_required(VERSION 2.8)
 add_executable(master master.cpp)
 add_executable(worker worker.cpp)
